fixed layout issues

--- a/client/assets/styles/scss/globals/globals.scss
+++ b/client/assets/styles/scss/globals/globals.scss
@@ -16,10 +16,10 @@ body {
 }
 
 .content {
-  display: flex;
-  flex-direction: column;
-  height: calc(100vh - 60px);
-  width: 100vw;
+  // display: flex;
+  // flex-direction: column;
+  // height: calc(100vh - 60px);
+  // width: calc(100vw - 240px);
 }
 
 // svg files
